--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,9 +18,12 @@ jobs:
     - name: Build and publish Blazor WebAssembly app
       run: dotnet publish -c Release -o publish
       
+    # copy index.html to 404.html to serve the same file when a file is not found
+    - name: copy index.html to 404.html
+      run: cp ./publish/wwwroot/index.html ./publish/wwwroot/404.html
+      
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3.7.0
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.MY_ACCESS_TOKEN }}
         publish_dir: ./publish/wwwroot
-        
