--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,3 +27,4 @@ jobs:
       with:
         github_token: ${{ secrets.MY_ACCESS_TOKEN }}
         publish_dir: ./publish/wwwroot
+        publish_branch: my-gh-pages
